--- a/Views/Admin.ejs
+++ b/Views/Admin.ejs
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Admin</title>
-    <link rel="stylesheet" href="../Public/Styles/AdminHome.css">
-    <link rel="stylesheet" href="../Public/Styles/AdminStyle.css">
+    <link rel="stylesheet" href="/Styles/AdminHome.css">
+    <link rel="stylesheet" href="/Styles/AdminStyle.css">
 </head>
 <body>
     <header>
         <nav>
             <h1>Dashboard</h1>
             <h2>Admin.</h2>
-            <a href="#"><img src="../Public/Images/account.jpg" alt="Account"></a>
+            <a href="#"><img src="/Images/account.jpg" alt="Account"></a>
         </nav>
     </header>
 
@@ -210,7 +210,7 @@
     <p class="status-message">Currently: <span class="current-status">Open</span></p>
 </div>
     
-<script src="../Public/JavaScript/Admin.js"></script>
+<script src="/JavaScript/Admin.js"></script>
 
     </div>
 </body>
