--- a/Views/Auth/Login.ejs
+++ b/Views/Auth/Login.ejs
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Login</title>
-    <link rel="stylesheet" href="../../Public/Styles/Login.css">
+    <link rel="stylesheet" href="/Styles/Login.css">
 </head>
 <body>
 
     <!-- Navbar -->
     <div class="navbar">
-        <div class="logo"><a href="../UniBite.html">UniBite.</a></div>
+        <div class="logo"><a href="../UniBite.ejs">UniBite.</a></div>
         <div class="nav-links">
-            <a href="../Stores.html">Restaurants</a>
-            <a href="../About-us.html">About Us</a>
-            <a href="../Help.html">Help</a>
+            <a href="/Stores">Restaurants</a>
+            <a href="/About-us">About Us</a>
+            <a href="/Help">Help</a>
         </div>
         <button class="signup-btn">Sign Up</button>
     </div>
@@ -50,7 +50,7 @@
         <div class="credentials">© 2025 UniBite. All rights reserved.</div>
     </div>
 
-    <script src="../../Public/JavaScript/EmailValidation.js"></script>
+    <script src="/JavaScript/EmailValidation.js"></script>
 
 </body>
 </html>
