--- a/Views/Auth/SignUp.ejs
+++ b/Views/Auth/SignUp.ejs
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Sign up</title>
-    <link rel="stylesheet" href="../../Public/Styles/SignUp.css">
+    <link rel="stylesheet" href="/Styles/SignUp.css">
 </head>
 <body>
 
 <!-- Navbar -->
 <div class="navbar">
-    <div class="logo"><a href="../UniBite.html">UniBite.</a></div>
+    <div class="logo"><a href="../UniBite.ejs">UniBite.</a></div>
     <div class="nav-links">
-        <a href="../Stores.html">Restaurants</a>
-        <a href="../About-us.html">About Us</a>
-        <a href="../Help.html">Help</a>
+        <a href="../Stores.ejs">Restaurants</a>
+        <a href="../About-us.ejs">About Us</a>
+        <a href="../Help.ejs">Help</a>
     </div>
     <button class="login-btn">Login</button>
 </div>
@@ -35,7 +35,7 @@
             </div>
 
             <div class="already-customer">
-                <a href="Login.html">Already a customer?</a>
+                <a href="Login.ejs">Already a customer?</a>
             </div>
         </form>
     </div>
@@ -52,7 +52,7 @@
     <div class="credentials">© 2025 UniBite. All rights reserved.</div>
 </div>
 
-<script src="../../Public/JavaScript/EmailValidation.js"></script>
+<script src="/JavaScript/EmailValidation.js"></script>
 
 </body>
 </html>
