--- a/Views/Help.ejs
+++ b/Views/Help.ejs
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UniBite - Help</title>
-    <link rel="stylesheet" href="../Public/Styles/Help.css">
+    <link rel="stylesheet" href="/Styles/Help.css">
 
 </head>
 <body>
 
 <!-- Navbar -->
 <div class="navbar">
-    <div class="logo"><a href="UniBite.html">UniBite.</a></div>
+    <div class="logo"><a href="UniBite.ejs">UniBite.</a></div>
     <div class="nav-links">
-        <a href="Stores.html">Restaurants</a>
-        <a href="About-us.html">About Us</a>
+        <a href="Stores.ejs">Restaurants</a>
+        <a href="About-us.ejs">About Us</a>
         <a href="Help.html">Help</a>
     </div>
-    <button class="signup-btn" onclick="window.location.href='SignUp.html'">Sign up</button>
-    <button class="login-btn" onclick="window.location.href='Login.html'">Log in</button></div>
+    <button class="signup-btn" onclick="window.location.href='SignUp.ejs'">Sign up</button>
+    <button class="login-btn" onclick="window.location.href='Login.ejs'">Log in</button></div>
 
 <!-- request Form Container -->
 <div class="main-content">
@@ -42,8 +42,8 @@
 <div class="footer">
     <div class="logo">UniBite.</div>
     <div class="footer-links">
-        <a href="Stores.html">Restaurants</a>
-        <a href="About-us.html">About Us</a>
+        <a href="Stores.ejs">Restaurants</a>
+        <a href="About-us.ejs">About Us</a>
         <a href="Help.html">Help</a>
 
     </div>
