--- a/Public/Styles/AdminHome.css
+++ b/Public/Styles/AdminHome.css
@@ -7,7 +7,7 @@ html, body {
 
 body {
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-                url('../Images/RedBlack.jpg') no-repeat center center fixed;
+    url('/Images/RedBlack.jpg') no-repeat center center fixed;
     background-size: cover;
     overflow-x: hidden;
 }
