--- a/Public/Styles/Products.css
+++ b/Public/Styles/Products.css
@@ -7,7 +7,7 @@ main {
 .background {
     width: 100%; /* Stretch from left to right */
     height: 100vh; /* Full height of the viewport */
-    background: url('Public/Images/back.jpeg') no-repeat center / cover; /* Proper background shorthand */
+    background: url('/Images/back.jpeg') no-repeat center / cover; /* Proper background shorthand */
     color: white; /* White text for contrast */
     text-align: center; /* Center text alignment */
     display: flex; /* Enable flex layout for centering content */
@@ -32,7 +32,7 @@ section{
     text-align: center;
 }
 .Storeshow{
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/Public/Images/corner_upscaled.png") no-repeat center center;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/Images/corner_upscaled.png") no-repeat center center;
     background-size: contain; /* Ensures the full image is visible */
     background-repeat: no-repeat; /* Prevents the image from repeating */
     width: 100%;
