--- a/Public/Styles/SignUp.css
+++ b/Public/Styles/SignUp.css
@@ -79,7 +79,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     margin: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/Public/Images/LoginBackGround.jpeg");
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("/Images/LoginBackGround.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
