--- a/Public/Styles/UniBite.css
+++ b/Public/Styles/UniBite.css
@@ -7,6 +7,7 @@
 html, body {
     overflow-x: hidden;
     font-size: 16px;
+
 }
 
 @media (max-width: 768px) {
@@ -22,14 +23,18 @@ html, body {
 .nav {
     position: fixed;
     width: 100%;
-    height: 75px;
+    height: 60px; /* Reduced height */
     display: flex;
     align-items: center;
     justify-content: space-between;
     z-index: 999;
-    padding: 0 4em;
-    background-color: white;
+    padding: 0 2em;
+    background: rgba(255, 255, 255, 0.7); /* White transparent background */
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    transition: background 0.3s ease, box-shadow 0.3s ease;
 }
+
+
 
 
 .left-items {
