--- a/Views/Products/Products.ejs
+++ b/Views/Products/Products.ejs
@@ -3,24 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>Products</title>
-  <link rel="stylesheet" href="../../Public/Styles/Products.css">
-  <link rel="stylesheet" href="../../Public/Styles/Universalcss.css">
+  <link rel="stylesheet" href="/Styles/Products.css">
+  <link rel="stylesheet" href="/Styles/Universalcss.css">
 
-  <header>
-    <h1 class="logo"><a href="../UniBite.html">UniBite.</a></h1>
-    <nav>
-      <ul>
-        <li><a href="../Stores.html">Restaurants</a></li>
-        <li><a href="../About-us.html">About us</a></li>
-        <li><a href="../Help.html">Help</a></li>
-      </ul>
-      <div>
-        <button class="singUp" onclick="window.location.href='SignUp.html'">Sign up</button>
-        <button class="logIn" onclick="window.location.href='Login.html'">Log in</button>
-      </div>
-    </nav>
-  </header>
 </head>
+
+<%- include('../partials/navbar.ejs') %>
 <body>
 <section class="Storeshow">
   <div class="StoreEX">
@@ -36,17 +24,17 @@
     <summary>Trending Products</summary>
     <div class="trending-products-container">
       <div class="trending-product">
-        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
       </div>
       <div class="trending-product">
-        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
       </div>
       <div class="trending-product">
-        <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
+        <img src="/Images/KiriFalafel.png" alt="KiriFalafel">
         <h3>Kiri Falafel Sandwich</h3>
         <p class="price">30 EGP</p>
       </div>
@@ -71,19 +59,19 @@
   <h2>Products</h2>
   <div class="products-list-container">
     <div class="product">
-      <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
+      <img src="/Images/KiriFalafel.png" alt="KiriFalafel">
       <h3>Kiri Falafel Sandwich</h3>
       <p class="price">30 EGP</p>
       <button class="addToCart">Add to cart</button>
     </div>
     <div class="product">
-      <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
+      <img src="/Images/KiriFalafel.png" alt="KiriFalafel">
       <h3>Kiri Falafel Sandwich</h3>
       <p class="price">30 EGP</p>
       <button class="addToCart">Add to cart</button>
     </div>
     <div class="product">
-      <img src="../../Public/Images/KiriFalafel.png" alt="KiriFalafel">
+      <img src="/Images/KiriFalafel.png" alt="KiriFalafel">
       <h3>Kiri Falafel Sandwich</h3>
       <p class="price">30 EGP</p>
       <button class="addToCart">Add to cart</button>
@@ -91,18 +79,9 @@
   </div>
 </section>
 
-<!-- Footer -->
-<div class="footer">
-  <div class="logo">UniBite.</div>
-  <div class="footer-links">
-    <a href="#">Restaurants</a>
-    <a href="#">About Us</a>
-    <a href="#">Help</a>
-  </div>
-  <div class="credentials">© 2025 UniBite. All rights reserved.</div>
-</div>
+<%- include('../partials/Footer.ejs') %>
 
-<script src="JavaScript/Products.js"></script>
+<script src="/JavaScript/ProductsJS.js"></script>
 
 
 
