--- a/Public/Styles/Universalcss.css
+++ b/Public/Styles/Universalcss.css
@@ -1,9 +1,9 @@
 :root {
-    --brandOrange: #FF4B33;
+    --brandOrange: #ff8a00;
 }
 body {
-    font-family: Inter, sans-serif; /*Setting default font*/
-    font-weight: normal;
+    font-family: "Inter", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+    "Helvetica Neue", sans-serif;
     display: flex;
     flex-direction: column;
     min-height: 100vh; /* Ensure the body takes up the full viewport height */
@@ -18,6 +18,8 @@ body {
 html, body {
     overflow-x: hidden;
     font-size: 16px;
+    scroll-behavior: smooth;
+
 }
 
 
@@ -75,7 +77,7 @@ html, body {
 }
 /* Changes text color on hover */
 .left-items a:hover {
-    color: #992D1F;
+    color: #ff8a00;
 }
 /* Underline effect on hover */
 .left-items a::after {
@@ -85,7 +87,7 @@ html, body {
     left: 0;
     width: 0; /* Width is initially 0 */
     height: 2px;
-    background: linear-gradient(to right, #992D1F 0%, #FF4B33 100%);
+    background: linear-gradient(to right, #ff8a00 0%, #ffa94d 100%);
     transition: width 0.8s ease;
 }
 .left-items a:hover::after {
@@ -106,7 +108,7 @@ html, body {
     border: none;
     border-radius: 50px;
     cursor: pointer;
-    background: linear-gradient(to right, #992D1F 0%, #FF4B33 100%);
+    background: linear-gradient(to right, #ff8a00 0%, #ffa94d 100%);
     position: relative; /* Required because of the hover effect */
     overflow: hidden;
 }
@@ -180,7 +182,7 @@ html, body {
         position: absolute;
         left: 0;
         font-size: 3.5rem;
-        color: #992D1F;
+        color: #ff8a00;
         font-weight: bold;
     }
 
@@ -290,7 +292,7 @@ html, body {
 }
 
 .footer .footer-links a:hover {
-    color: #FF4B33;
+    color: #ff8a00;
 }
 
 
