--- a/Views/About-us.ejs
+++ b/Views/About-us.ejs
@@ -30,7 +30,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/stores">Stores</a></li>
-          <li><a href="/about" class="active">About Us</a></li>
+          <li><a href="/about-us" class="active">About Us</a></li>
           <li><a href="/help">Help</a></li>
         </ul>
       </nav>
@@ -79,7 +79,7 @@
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="stores">Stores</a></li>
-      <li><a href="about" class="active">About Us</a></li>
+      <li><a href="about-us" class="active">About Us</a></li>
       <li><a href="help">Help</a></li>
     </ul>
   </nav>
@@ -200,7 +200,7 @@
         <p>&copy; <span id="current-year">2025</span> UniBite. All rights reserved.</p>
       </div>
       <div class="footer-links">
-        <a href="about">About</a>
+        <a href="about-us">About</a>
         <a href="help">Help</a>
         <a href="privacy">Privacy</a>
         <a href="terms">Terms</a>
