--- a/Views/Help.ejs
+++ b/Views/Help.ejs
@@ -30,7 +30,7 @@
         <ul>
           <li><a href="/">Home</a></li>
           <li><a href="/stores">Stores</a></li>
-          <li><a href="/about">About Us</a></li>
+          <li><a href="/about-us">About Us</a></li>
           <li><a href="/help" class="active">Help</a></li>
         </ul>
       </nav>
@@ -478,7 +478,7 @@
       <div class="footer-links">
         <a href="/privacy">Privacy Policy</a>
         <a href="/terms">Terms of Service</a>
-        <a href="/about">About Us</a>
+        <a href="/about-us">About Us</a>
         <a href="/contact">Contact</a>
       </div>
     </div>
