--- a/Views/Stores.ejs
+++ b/Views/Stores.ejs
@@ -30,7 +30,7 @@
                 <ul>
                     <li><a href="/">Home</a></li>
                     <li><a href="/stores" class="active">Stores</a></li>
-                    <li><a href="/about">About Us</a></li>
+                    <li><a href="/about-us">About Us</a></li>
                     <li><a href="/help">Help</a></li>
                 </ul>
             </nav>
@@ -77,7 +77,7 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/stores" class="active">Stores</a></li>
-            <li><a href="/about">About Us</a></li>
+            <li><a href="/about-us">About Us</a></li>
             <li><a href="/help">Help</a></li>
         </ul>
     </nav>
@@ -160,7 +160,7 @@
                 <p>&copy; <span id="current-year">2025</span> UniBite. All rights reserved.</p>
             </div>
             <div class="footer-links">
-                <a href="/about">About</a>
+                <a href="/about-us">About</a>
                 <a href="/help">Help</a>
                 <a href="/privacy">Privacy</a>
                 <a href="/terms">Terms</a>
